# meddler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/meddler-cli/: Cargo.toml
crates/meddler-cli/src/: agent_cmd.rs  main.rs  send_cmd.rs
crates/meddler-core/: Cargo.toml
crates/meddler-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/meddler-mcp/: Cargo.toml
crates/meddler-mcp/src/: jsonrpc.rs  lib.rs  tools.rs
crates/meddler-server/: Cargo.toml
crates/meddler-server/src/: app_state.rs  lib.rs  main.rs  router.rs  session.rs
crates/meddler-server/src/handlers/: agent.rs  health.rs  mcp.rs  mod.rs
crates/meddler-server/tests/: integration.rs  mock_stores.rs
crates/meddler-store/: Cargo.toml
crates/meddler-store/src/: postgres.rs
migrations/: 20250205_001_initial.sql
