[package]
name = "meddler-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meddler"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { workspace = true }
meddler-core = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
