[package]
name = "meddler-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
meddler-core = { workspace = true }
meddler-mcp = { workspace = true }
meddler-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum-test = "17"
